@@ -22,9 +22,10 @@ public class ProductResponse {
     public ProductResponse(Product product) {
         this.product_name = product.getProductName();
         this.product_description = product.getProduct_description();
-        this.product_category = product.getCategory_id().getCategoryName();
-        this.refundable = product.getProduct_variant().getFirst().getRefundable();
-    }
+        this.product_category = product.getCategory_id().getCategoryName() ;
+        this.refundable = (product.getProduct_variant() != null && !product.getProduct_variant().isEmpty())
+                ? product.getProduct_variant().get(0).getRefundable()
+                : null;     }
 
 
 }
